<?xml version="1.0"?>
<package format="2">
  <name>assign1_2</name>
  <version>0.0.0</version>
  <description>The assign1_2 package</description>
  <maintainer email="znasir1@binghamton.edu">Zain-ul-Abideen Nasir</maintainer>
	<maintainer email="arakshi1@binghamton.edu">Aniruddha Rakshit</maintainer>
	<license>TODO: Add license</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
